Updated references on all html files and updated CSS to align and size objects correctly.

--- a/activities.html
+++ b/activities.html
@@ -23,7 +23,7 @@
 
 <main class="container">
   <section class="content">
-    <h1>Taniti Activities</h1>
+    <h1 style="text-align: center">Taniti Activities</h1>
     <ul>
       <li><strong>Entertainment:</strong> Entertainment: Most people visit Taniti to enjoy the beaches, explore the
         rainforest, and to visit the volcano. However, there are other things to do, including visiting a local
@@ -46,10 +46,14 @@
     </ul>
   </section>
   <aside class="map-section">
+    <p style="color: #ffa500; text-align: center" >Click Map to go directly to Google Maps</p>
     <a href="https://www.google.com/maps/search/entertainment/@19.5187316,-155.0443566,34352m/data=!3m1!1e3!4m8!2m7!3m5!2sPacific+Ocean!3s0x76ed042c30f318eb:0x8eff14a070876cbc!4m2!1d-124.508523!2d-8.783195!6e1?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D" target="_blank">
       <img src="images/activityimage.png" alt="Map of Taniti" />
+      <p style="font-size: 0.9em; color: #FFFFFF;">
+        Reference: Google. (2024). [Search results for “Entertainment”]
+      </p>
     </a>
-    <a class="map-link" href="https://www.google.com/maps" target="_blank">Click Map to go directly to Google Maps</a>
+
   </aside>
 </main>
 </body>
