--- a/faq.html
+++ b/faq.html
@@ -18,10 +18,14 @@
       <li><a href="transportation.html">Transportation</a></li>
       <li><a href="faq.html">FAQ</a></li>
     </ul>
-  </nav>
+  </nav> <br>
+  <section class="content">
+  <h1 style="text-align: center">Frequently Asked Questions</h1>
+  </section>
 </header>
 
 <main class="faq-container">
+
   <section class="questions">
     <div class="faq-box">What power outlets are used on the island?</div>
     <div class="faq-box">What times are the time restrictions on alcohol?</div>
