--- a/food.html
+++ b/food.html
@@ -23,19 +23,22 @@
 
 <main class="container">
   <section class="content">
-    <h1>Taniti Food Services</h1>
+    <h1 style="text-align: center">Taniti Food Services</h1>
     <ul>
       <li><strong>Restaurants:</strong> Restaurants: Taniti currently has 10 restaurants: five serve mostly local fish
-        and rice, three serve American-style meals, and two serve Pan-Asian cuisine.</li>
+        and rice, three serve American-style meals, and two serve Pan-Asian cuisine.</li> <br>
       <li><strong>Grocery Stores:</strong> Grocery Stores: Taniti has two supermarkets, two smaller grocery stores,
         and one convenience store that is open 24 hours a day. </li>
     </ul>
   </section>
   <aside class="map-section">
+    <p style="color: #ffa500; text-align: center" >Click Map to go directly to Google Maps</p>
     <a href="https://www.google.com/maps/search/Restaurants/@19.5022848,-155.1023766,30204m/data=!3m1!1e3!4m8!2m7!3m5!2sPacific+Ocean!3s0x76ed042c30f318eb:0x8eff14a070876cbc!4m2!1d-124.508523!2d-8.783195!6e5?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D" target="_blank">
       <img src="images/foodimage.png" alt="Map of Taniti" />
+      <p style="font-size: 0.9em; color: #FFFFFF;">
+        Reference: Google. (2024). [Search results for “Restaurants”]
+      </p>
     </a>
-    <a class="map-link" href="https://www.google.com/maps" target="_blank">Click Map to go directly to Google Maps</a>
   </aside>
 </main>
 </body>
