--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <main class="container">
   <section class="content">
-    <h1>Welcome to the Lovely Island of Taniti</h1>
+    <h1 style="text-align: center">Welcome to the Lovely Island of Taniti</h1>
     <p style="line-height: 40px;">Taniti is a small, tropical island in the Pacific. While the island has an area
     of less than 500 square miles, the terrain is varied and includes both sandy and rocky beaches, a small but
     safe harbor, lush tropical rainforests, and a mountainous interior that includes a small, active volcano.
@@ -33,8 +33,17 @@
   <aside class="image-section img">
 
       <img src="images/image1.jpg" alt="Map of Taniti"  />
+    <p style="font-size: 0.5em; color: #FFFFFF;">
+      Reference: van Breugel, F. (n.d.). National park beach [Photograph].
+    </p>
       <img src="images/image2.jpg" alt="Map of Taniti"  />
+    <p style="font-size: 0.5em; color: #FFFFFF;">
+      Reference: van Breugel, F. (n.d.). National park beach [Photograph].
+    </p>
       <img src="images/image3.jpg" alt="Map of Taniti" />
+    <p style="font-size: 0.5em; color: #FFFFFF;">
+      Reference: van Breugel, F. (n.d.). National park beach [Photograph].
+    </p>
   </aside>
 </main>
 </body>
