--- a/lodging.html
+++ b/lodging.html
@@ -23,7 +23,7 @@
 
 <main class="container">
   <section class="content">
-    <h1>Taniti Lodging Services</h1>
+    <h1 style="text-align: center">Taniti Lodging Services</h1>
     <ul>
       <li><strong>Lodging:</strong> Lodging: Taniti has a wide variety of lodging that ranges from
         an inexpensive hostel to one large, four-star resort. There are many small, family-owned hotels
@@ -32,10 +32,13 @@
     </ul>
   </section>
   <aside class="map-section">
+    <p style="color: #ffa500; text-align: center" >Click Map to go directly to Google Maps</p>
     <a href="https://www.google.com/maps/search/lodging/@19.4816861,-154.9694387,23586m/data=!3m1!1e3!4m8!2m7!3m6!1slodging!2sPacific+Ocean!3s0x76ed042c30f318eb:0x8eff14a070876cbc!4m2!1d-124.508523!2d-8.783195?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D" target="_blank">
       <img src="images/lodgeimage.png" alt="Map of Taniti" />
+      <p style="font-size: 0.9em; color: #FFFFFF;">
+        Reference: Google. (2024). [Search results for “Lodging”]
+      </p>
     </a>
-    <a class="map-link" href="https://www.google.com/maps" target="_blank">Click Map to go directly to Google Maps</a>
   </aside>
 </main>
 </body>
