--- a/transportation.html
+++ b/transportation.html
@@ -23,7 +23,7 @@
 
 <main class="container">
   <section class="content">
-    <h1>Taniti Transportation</h1>
+    <h1 style="text-align: center">Taniti Transportation</h1>
     <p>Almost all visitors arrive in Taniti by air, though some arrive on a small cruise ship that docks
       in Yellow Leaf Bay for one night per week. Taniti is served by a small airport that can accommodate small
       jets and propeller planes. Taniti is in the process of expanding the airport so larger jets will be able
@@ -39,11 +39,16 @@
     <p>Taniti City is flat and very walkable. Many tourists stay in the area surrounding
       Merriton Landing: this area is easy to explore on foot.</p>
   </section>
+
   <aside class="map-section">
+    <p style="color: #ffa500; text-align: center" >Click Map to go directly to Google Maps</p>
     <a href="https://www.google.com/maps/search/buses/@19.7098248,-155.1035995,20442m/data=!3m1!1e3!4m7!2m6!3m5!2sPacific+Ocean!3s0x76ed042c30f318eb:0x8eff14a070876cbc!4m2!1d-124.508523!2d-8.783195?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D" target="_blank">
       <img src="images/transportationimage.png" alt="Map of Taniti" />
+      <p style="font-size: 0.9em; color: #FFFFFF;">
+        Reference: Google. (2024). [Search results for “Buses”]
+      </p>
     </a>
-    <a class="map-link" href="https://www.google.com/maps" target="_blank">Click Map to go directly to Google Maps</a>
+
   </aside>
 </main>
 </body>
