--- a/transportation.html
+++ b/transportation.html
@@ -28,7 +28,7 @@
       in Yellow Leaf Bay for one night per week. Taniti is served by a small airport that can accommodate small
       jets and propeller planes. Taniti is in the process of expanding the airport so larger jets will be able
       to land on the island within the next few years. </p>
-    <h2>Ground Transportation</h2>
+    <h2 style="color: #72b84d">Ground Transportation</h2>
     <ul>
       <li>	Public buses serve Taniti City and run from 5 a.m. to 11 p.m. every day. </li>
       <li>	Private buses serve the rest of the island. </li>
